logs/Slang/generated/hdlconv/hdlconvertor_p835.sv.log
name: hdlconvertor_p835
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:1:1: error: expected member
primitive dff1 (q, clk,d);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:5:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:8:1: error: expected member
r 1 : ? : 1;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:9:1: error: expected member
f ? : ? : -;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:10:1: error: expected member
? * : ? : -;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:11:1: error: expected member
endtable
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:17:1: error: unknown module 'dff1'
dff1
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:19:1: error: expected member
buf #3 g2 (q, qi);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p835.sv:20:1: error: expected member
not #5 g3 (qb, qi);
^~~
